# django-htmx-components

./: LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
example/components/calendar/: calendar.html  calendar.py
example/example/: settings.py  urls.py
example/simple/: apps.py  components.py  forms.py  urls.py  views.py
example/simple/templates/htmx/auth/: login_button.html  login_form.html  logout_button.html
example/simple/templates/simple/: index.html
example/templates/: base.html
src/django_htmx_components/: __init__.py  apps.py  component.py  site.py  types.py
src/django_htmx_components/debug/: panels.py
src/django_htmx_components/templates/debug_toolbar/panels/: registry.html
src/django_htmx_components/templates/htmx/: _scope.html  _scopes.html  base.html
src/django_htmx_components/templatetags/: htmx_components_tags.py
tests/: settings.py  test_simple.py
