[metadata]
name = django_htmx_components
version = 1.0.0
description = Helper to create components for htmx.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ar4s/django-htmx-components
author = Arkadiusz Adamski
author_email = arkadiusz.adamski@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = Django
project_urls =
    Twitter = https://twitter.com/ar4s

[options]
packages = find:
install_requires =
    Django>=3.2
    pydantic>=1.8.2
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    django_htmx_components
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

